fixing text alignment

--- a/frontend/src/app/shared/components/calendar/calendar.component.sass
+++ b/frontend/src/app/shared/components/calendar/calendar.component.sass
@@ -45,7 +45,7 @@ mat-label
     padding-top: 0 !important
 
 ::ng-deep.mat-mdc-form-field-input-control
-    margin-top: 20px
+    margin-top: 12px
 
 ::ng-deep.mat-mdc-form-field-infix
     min-height: 1px !important
